[metadata]
name = molpal
version = 1.2.0
author = david graff
author_email = deg711@g.harvard.edu
description = active learning to accelerate virtual drug discovery
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
	Programming Language :: Python :: 3
url = https://github.com/coleygroup/molpal
platforms = Linux, Mac OS-X, Unix

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires = 
	configargparse
	h5py
	numpy
	ray >= 1.11
	rdkit
	scikit_learn
	tabulate
	tensorflow
	tensorflow_addons
	tqdm

[options.entry_points]
console_scripts = 
	molpal = molpal.cli.main:main

[options.extras_require]
dev =
	black
	bumpversion
	flake8
	pre-commit
	pytest
plot = 
	matplotlib
	seaborn
test = pytest
